# useful-functions

./: CMakeLists.txt
cmake-modules/: compiler-flags.cmake  helper-functions.cmake
source/: CMakeLists.txt  boost-version.hpp  permutation.hpp  print-vector.hpp
tests/: CMakeLists.txt
tests/test-permutation/: CMakeLists.txt  test-permutation.cpp
